// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just subtitle 1`] = `
<div
  class="feature__Container-sc-3uhhls-0 dQSRzJ"
>
  <h2
    class="feature__SubTitle-sc-3uhhls-2 iXicNo"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just title 1`] = `
<div
  class="feature__Container-sc-3uhhls-0 dQSRzJ"
>
  <h1
    class="feature__Title-sc-3uhhls-1 dMLHNc"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-3uhhls-0 dQSRzJ"
>
  <h1
    class="feature__Title-sc-3uhhls-1 dMLHNc"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-3uhhls-2 iXicNo"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
